aggiunti chunk di spawn per gli orchi, aggiunti i livelli e gli sprite per ogni livello